<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"

    android:layout_height="match_parent"
    tools:context=".resource">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:src="@drawable/resource_bannerr" />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:padding="50dp"
    android:layout_height="wrap_content">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/r1"
        android:layout_marginRight="50dp"
        android:text="@string/r1"
        android:textSize="14dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/r2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:text="@string/r2"
        android:textSize="14dp"
        android:textStyle="bold" />

             <TextView
                 android:id="@+id/r3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:text="@string/r3"
                android:textSize="14dp"
                android:textStyle="bold" />
             <TextView
                 android:id="@+id/r4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:text="@string/r4"
                android:textSize="14dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/r5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:text="@string/r5"
                android:textSize="14dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/r6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:text="@string/r6"
                android:textSize="14dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/r7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:text="@string/r7"
                android:textSize="14dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/r8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:text="@string/r8"
                android:textSize="14dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/r9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:text="@string/r9"
                android:textSize="14dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/r10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:text="@string/r10"
                android:textSize="14dp"
                android:textStyle="bold" />
    <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="#009688"
                android:text="Practise more and more"
                android:textSize="20dp"

                android:textStyle="bold|italic" />
</LinearLayout>
</ScrollView>
</LinearLayout>