<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".listening">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="170dp"

        android:src="@drawable/listening_banner" />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:layout_height="wrap_content">

            <TextView

                android:id="@+id/listening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:layout_marginTop="20dp"
                android:paddingRight="5dp"
                android:text="@string/listening" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Question pattern"
                android:background="@drawable/shadow"
                android:padding="10dp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:layout_gravity="center"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textStyle="italic"
                android:paddingRight="5dp"
                android:text="@string/ql" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/answerl"
                android:layout_marginRight="50dp"
                android:text="@string/answerL"
                android:textSize="14dp"
                android:textStyle="bold" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tips for listening"
                android:background="@drawable/shadow"
                android:padding="10dp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:layout_gravity="center"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/tips_lis" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Brand Score"
                android:background="@drawable/shadow"
                android:padding="10dp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:layout_gravity="center"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/scoreoflis"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>